--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>COKTAILS</title>
+    <link
+      rel="cocktail-icon"
+      sizes="180x180"
+      href="./images/favicon/cocktail-icon.png"
+    />
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
