--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COKTAILS</title>
     <link
-      rel="cocktail-icon"
+      rel="apple-touch-icon"
       sizes="180x180"
-      href="./images/favicon/cocktail-icon.png"
+      href="./images/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
