--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,9 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
-    <include scr="./partials/hero.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include scr="./partials/favorite.html"></include>
+    <include scr="./partials/footer.html"></include>
+    <include scr="./partials/modal.html"></include>
   </body>
 </html>
