add work files for modal

--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,7 @@
     <include scr="./partials/favorite.html"></include>
     <include scr="./partials/footer.html"></include>
     <include scr="./partials/modal.html"></include>
+    <include scr="./partials/modal-coctails.html"></include>
+    <include scr="./partials/modal-ingredients.html"></include>
   </body>
 </html>
