--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
+    <include src="./partials/footer.html"></include>
     <include scr="./partials/favorite.html"></include>
-    <include scr="./partials/footer.html"></include>
     <include scr="./partials/modal.html"></include>
     <include scr="./partials/modal-coctails.html"></include>
     <include scr="./partials/modal-ingredients.html"></include>
